# colorized

./: Cargo.toml  LICENCE  README.md
Documentation/: ColorizePrint.md  ColorizePrintLn.md  ColorizeThis.md  ColorsEnum.md  ColorsImpl.md  ColorsTrait.md
src/: colors_definations.rs  commands.rs  lib.rs
