[package]
name = "colorized"
version = "0.8.5"
edition = "2021"
authors = ["Xavier Brasher <xavier.brasher@gmail.com>"]
license = "MIT"
description = "A tool to colorized output"
readme = "README.md"
homepage = "https://github.com/xavierbrasher/colorized" 
repository = "https://github.com/xavierbrasher/colorized"
keywords = ["color", "command", "cli"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
