[package]
name = "colorized"
version = "0.8.7"
edition = "2021"
authors = ["Xavier Brasher <xavier.brasher@gmail.com>"]
license = "MIT"
description = "A tool to colorized output"
documentation = "https://github.com/xavierbrasher/colorized/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/xavierbrasher/colorized" 
repository = "https://github.com/xavierbrasher/colorized"
keywords = ["color", "command", "cli"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
